[package]
name = "test-github-device-flow-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.27.0", features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11.0"
is-terminal = "0.4.10"
