[package]
name = "test-github-device-flow-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
attohttpc = { version = "0.27.0", features = [
  "tls-rustls-native-roots",
  "form",
  "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11.0"
is-terminal = "0.4.10"
webbrowser = "0.8.12"
log = "0.4.20"
env_logger = "0.11.1"
# Conditional dependency on `keyring` for non-macOS platforms
keyring = { version = "2.3.2", optional = true }
thiserror = "1.0.56"
dirs = "5.0.1"
serde_yaml = "0.9.31"

[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring = "2.3.2"
